2006-09-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am: Fixed installed directory ownership on
	  $(localstatedir) & $(localstatedir)/*.

2006-09-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am, src/libcommon/Makefile.am,
	  src/libmunge/Makefile.am, src/munge/Makefile.am,
	  src/munged/Makefile.am: Fixed bug on AIX causing directories created
	  during "make install" to have wrong permissions inherited from umask.

	* src/munged/auth_recv.c(_check_auth_client_dir):
	  Added auth client dir ownership check.

	* BUGS, PLATFORMS, TODO: Updated.

	* README, munge.spec, src/libcommon/munge.7.in: Updated description.

	* QUICKSTART: Updated.

	* src/munged/munged.8.in: Updated info on --force cmdline opt.
	* src/munged/munged.c(write_pidfile): Added pidfile_name path checks.
	* src/munged/munged.c(open_logfile): Added logfile_name path checks.
	* src/munged/munged.c(sock_create): Added socket_name path checks.
	* src/munged/auth_recv.c(auth_recv_init):
	  Added auth_server_dir & auth_client_dir path checks via
	  _check_auth_server_dir() & _check_auth_client_dir().
	* src/munged/auth_recv.h: Updated prototype for auth_recv_init().
	* src/munged/conf.c(create_subkeys): Added key_name path checks
	  via _conf_open_keyfile().
	* src/munged/random.c(random_init): Added seed_name path checks.
	* src/munged/random.c(random_fini): Set restricted umask as precaution.
	* src/munged/Makefile.am: Added path.c & path.h.
	* src/munged/path.c, src/munged/path.h: Added.

2006-09-12  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge_enum.3.in, src/munge/munge.1.in,
	  src/munge/remunge.1.in: Fixed Lintian warning about
	  hyphen-used-as-minus-sign (Thanks to Gennaro Oliva).

2006-09-07  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Changed use of "expr" to "expr --" to prevent
	  next arg from potentially being treated as a cmdline option.

2006-09-04  Chris Dunlap  <cdunlap@llnl.gov>
